# philosophers

./: CMakeLists.txt  main.cpp  start_app.sh
src/: CMakeLists.txt  fork.cpp  fork.h  philosopher.cpp  philosopher.h
